[package]
name = "mdbook-typst-piggsoft"
version = "0.1.0"
authors = [
    "Alex Chen <piggsoft@163.com>"
]
edition = "2021"
repository = "https://www.github.com/piggsoft/mdbook-typst-piggsoft"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
mdbook = "0.4.37"
#log = "0.4.21"
#env_logger = "0.11.3"
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
serde = { version = "1.0.197", features = ["derive"] }
