[package]
name = "mdbook-typst-piggsoft"
version = "0.1.0"
authors = [
    "Alex Chen <piggsoft@163.com>"
]
edition = "2021"
description = "一个mdbook的output链，依靠typst将markdown文件导出为pdf、svg、png。"
license = "Apache-2.0"
readme = "readme.md"
homepage = "https://github.com/piggsoft/mdbook-typst-piggsoft"
repository = "https://github.com/piggsoft/mdbook-typst-piggsoft"
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
mdbook = "0.4.37"
#log = "0.4.21"
#env_logger = "0.11.3"
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
serde = { version = "1.0.197", features = ["derive"] }
